--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+<html lang="nl">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Funda favorieten</title>
+    <link rel="stylesheet" href="./styles/styles.css">
+  </head>
+  <body>
+    <header>
+        <nav>
+            <ul>
+                <li>
+                    <a>
 
+                    </a>
+                </li>
+            </ul>
+        </nav>
+
+
+    </header>
+    <main>
+        <section>
+            <img>
+                <img>
+                <svg>
+                    <meter>
+                        <a>
+                            <p> 
+
+                          </p>
+                        </a>
+                    </meter>
+                </svg>
+                 </img>
+
+            </ul>
+        </section>
+    </main>
+    <footer>
+
+        <p>
+            <a>
+                
+            </a>
+        </p>
+
+
+    </footer>
+  </body>
+</html>
